--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 	id "com.diffplug.spotless" version "6.25.0"
 }
 
-check.dependsOn spotlessApply
+processResources.dependsOn spotlessApply
 
 spotless {
 	groovyGradle {
