--- a/src/main/groovy/se.bjurr.gradle.conventional-release.gradle
+++ b/src/main/groovy/se.bjurr.gradle.conventional-release.gradle
@@ -1,5 +1,5 @@
 def getGivenConfigConventionalelease() {
-	def propertyFile = file("$projectDir/gradle.properties")
+	def propertyFile = file("$rootDir/gradle.properties")
 	def gradleProps = new Properties()
 	propertyFile.withReader { gradleProps.load(it) }
 	def givenConfig = [
